# rgen

./: .gitignore  MANIFEST.in  README.md  REPLICATE_README.md  __init__.py  pyproject.toml  readme.yaml
rgen/: rgen.py
rgen/data/: cog_readme_template.md  replicate_readme_template.md
